[package]

name = "hyper-old-types"
version = "0.11.0" # don't forget to update html_root_url
description = "HTTP types from hyper 0.11.x"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper-old-types"
repository = "https://github.com/hyperium/hyper-old-types"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = []

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
base64 = "0.13.0"
bytes = "1.2"
http = { version = "0.2.8", optional = true }
httparse = "1.0"
language-tags = "0.3.2"
log = "0.4"
mime = "0.3.2"
percent-encoding = "2.2"
time = "0.1.44"
unicase = "2.0"

[features]
default = []
compat = ["http"]
nightly = []
